# Team_23_demo

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  farmvillage  run.sh
assets/: position_guide.pptx
assets/map_design/: 14_Basement_16x16.tsx  17_Garden_16x16.tsx  1_Generic_16x16.tsx  1_Terrains_16x16.tsx  1_Terrains_16x16_autumn.tsx  1_Terrains_16x16_winter.tsx  2_Fences_16x16.tsx  2_LivingRoom_16x16.tsx  3_Props_and_Buildings_16x16.tsx  4_Bedroom_16x16.tsx  7_Pickup_Items_16x16.tsx  Cow_16x16.tsx  Cow_32x32.tsx  Godot_Autotiles_16x16.tsx  Icons_16x16.tsx  Icons_16x16_Crops_Blueberry.tsx  Icons_16x16_Crops_Eggplant.tsx  Icons_24x24.tsx  Icons_32x32.tsx  KakaoTalk_20260529_163459373.tsx  Modern_UI_Style_1.tsx  Modern_UI_Style_1_32x32.tsx  Pig_Pink_16x16.tsx  Pig_Pink_32x32.tsx  Premade_Character_08.tsx  Room_Builder_3d_walls_16x16.tsx  Room_Builder_Floor_Paths_16x16.tsx  Room_Builder_Floors_16x16.tsx  Room_Builder_Walls_16x16.tsx  Rooster_Golden_16x16.tsx  Rooster_Golden_32x32.tsx  Sheep_White_16x16.tsx  Sheep_White_32x32.tsx  Singles_Icons_32x32_Crops_ eggplant.tsx  barn-1.tsx  barn.tsx  barn_32x32.tsx  charact_setting.tmj  charact_setting.tmx  complete_tileset.tsx  (+50 more)
